--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #f2f2f2; /* set background color */
+        }
+        form {
+            margin: 0 auto; /* center form on the page */
+            background-color: #fff; /* set background color for form */
+            padding: 20px; /* add padding to form */
+            width: 400px; /* set width of form */
+            box-shadow: 0px 0px 10px #ccc; /* add shadow effect to form */
+        }
+        input[type="text"], input[type="submit"] {
+            padding: 10px; /* add padding to input fields */
+            margin-bottom: 10px; /* add margin to input fields */
+            border: none; 
+            border-radius: 5px; 
+        }
+        input[type="submit"] {
+            background-color: #4CAF50; 
+            color: #fff; 
+            cursor: pointer; 
+        }
+        input[type="submit"]:hover {
+            background-color: #3e8e41; 
+        }
+    </style>
 </head>
 <body>
-    <h1>form</h1>
-    <form action="/predict" method="post">
-       userName: <input type="text" name="userName" placeholder="user name"/>
-       <input type="submit" value="submit">
-
-    </form>
-
-eee
+    
     <form action="/predict" method="POST" enctype="application/json">
         <label for="ph">pH:</label>
         <input type="text" id="ph" name="ph"><br><br>
@@ -44,8 +63,7 @@ eee
       
         <input type="submit" value="Submit">
       </form>
-      <h1> {'ph': 7.2, 'Hardness': 300, 'Solids': 1000, 'Chloramines': 7, 'Sulfate': 200, 'Conductivity': 500, 'Organic_carbon': 20, 'Trihalomethanes': 50, 'Turbidity': 4}
-        headers = {'Content-type': 'application/json'}</h1>
+   
       
 </body>
 </html>
