--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Centered Box with Image</title>
-	<style >
-		.center-box {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100px;
-			width:200px;
-		}
-		.center-box img {
-			max-width: 100%;
-			max-height: 100%;
-			object-fit: contain;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body{
+            background: linear-gradient(rgba(0, 0, 0, 0.9), rgb(0, 0, 0,0.9)),
+        url("https://images.theconversation.com/files/161848/original/image-20170321-5391-lhfxgo.jpg?ixlib=rb-1.1.0&rect=0%2C613%2C5616%2C2723&q=45&auto=format&w=1356&h=668&fit=crop") center/cover fixed no-repeat;
+        }
+         .img-div{
+            margin-top: 10%;
+            margin-left: 35%;
+            border-radius: 10px;
+            box-shadow: 10px;
+            width: 30vw;
+            height:40vh;
+         }
+         h1{
+            color:chartreuse;
+            text-align: center;
+         }
+         
+    </style>
 </head>
+
 <body>
-	<div class="center-box">
-		<img src="https://media.istockphoto.com/id/1290513416/photo/staying-hydrated.jpg?b=1&s=170667a&w=0&k=20&c=DSlu3BuR2ZLWY-lJJPWUIySkSw7gsJyumnWmRLPNuTU=" alt="Your Image" >
-	</div>
-	<h1> {{ n }}</h1>
-    
+  
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKNDMObWT0J0ucV1rqAmNp6ibDFS8FUeVBNg&usqp=CAU" class="img-div" alt="image is loading"/>
+    <h1>Drinkable Water</h1>
 </body>
+
 </html>
-
-
-
